# 2023_adventofcode

./: .gitignore  README.md  pyproject.toml
day_01/: trebuchet.md  trebuchet.py
day_02/: cube_conundrum.md  cube_conundrum.py
day_03/: gear_ratios.md  gear_ratios.py
day_04/: scratchcards.md  scratchcards.py
day_05/: if_you_give_a_seed_a_fertilizer.md  if_you_give_a_seed_a_fertilizer.py
test/: test_trebuchet.py
test/day_01/: test_trebuchet.py
test/day_02/: test_cube_conundrum.py
test/day_03/: test_gear_ratios.py
test/day_04/: test_scratchcards.py
test/day_05/: test_if_you_give_a_seed_a_fertilizer.py
