[tool.poetry]
name = "2023_adventofcode"
version = "0.1.0"
description = "Solutions advent of code 2023"
authors = ["Santiago Bello <isbelloq@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
